Enable authentication through JWT