@@ -1,7 +1,8 @@
-package dev.johnmaluki.boardroom_booking_backend.user.service;
+package dev.johnmaluki.boardroom_booking_backend.config.security;
 
 import dev.johnmaluki.boardroom_booking_backend.user.model.AppUser;
 import dev.johnmaluki.boardroom_booking_backend.user.model.Role;
+import dev.johnmaluki.boardroom_booking_backend.util.RoleType;
 import lombok.Getter;
 import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
@@ -9,6 +10,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -24,11 +26,12 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        Optional<Role> role = Optional.ofNullable(user.getRole());
-        if (role.isPresent()) {
-            return List.of(new SimpleGrantedAuthority(user.getRole().getAuthority().name()));
+        Optional<Role> roleOptional = Optional.ofNullable(user.getRole());
+        if (roleOptional.isPresent()) {
+            RoleType roleType = roleOptional.get().getAuthority();
+            return List.of(new SimpleGrantedAuthority(roleType.name()));
         } else {
-            return List.of();
+            return Collections.emptyList();
         }
 
     }
@@ -42,4 +45,9 @@ public class UserPrincipal implements UserDetails {
     public String getUsername() {
         return user.getUsername();
     }
+
+    public long getUserId() {
+        return this.user.getId();
+    }
+
 }
